@@ -1,5 +1,6 @@
 WendzelNNTPd History:
 ---------------------
+30-Mar-2023 - Improve session logging and fix compile without TLS.
 23-Mar-2023 - Update documentation and some small changes.
 22-Jan-2023 - Improved config file parsind and some defaults.
 16-Jan-2023 - Implemented Option "openssl-cipher-suites" to select
